# CLEAR-AutomatedAnalysis

./: .gitignore  1-create_entries_dataset.py  2-generate_UI_results.py  README.md  next-steps.md  pyproject.toml  requirements.txt
cli/: create_entries.py  create_report_data.py  generate_ui.py  ingest_window.py
docs/adr/: 0001-situation-analysis-as-location-metadata.md
report/: CLEAR_Project_Report_tmp.docx  draw_pipeline.py  generate_report.py
src/analysis/: bundle_assembler.py  clear_api_client.py  context_generation.py  documents_based_analysis.py  generate_ui.py  merge_numbers.py  numbers_extraction.py  publisher.py  sources_builder.py
src/viz/: crisis_dashboard.html  lebabon_crisis_dashboard.html
src/viz/Lebanon_src/: current_hazards_and_threats_data.js  displacement_data.js  displacement_risks_data.js  final_numbers_data.js  humanitarian_access_data.js  information_coverage_data.js  key_sector_numbers_data.js  output_context_risks_data.js  precrisis_vulnerabilities_data.js  shown_risks_data.js  top_5_sources_data.js  top_priority_interventions_data.js  top_sectoral_needs_data.js
src/viz/Sudan_src/: current_hazards_and_threats_data.js  displacement_data.js  displacement_risks_data.js  final_numbers_data.js  humanitarian_access_data.js  information_coverage_data.js  key_sector_numbers_data.js  output_context_risks_data.js  precrisis_vulnerabilities_data.js  shown_risks_data.js  top_5_sources_data.js  top_priority_interventions_data.js  top_sectoral_needs_data.js
tests/: test_bundle_assembler.py  test_clear_api_client.py  test_ingest_window.py  test_publisher.py  test_sources_builder.py
