[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clear-automatedanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "supervision==0.24.0",
    "sentence-transformers==5.1.0",
    "nltk==3.8.1",
    "huggingface_hub==0.25.1",
    "tqdm==4.66.2",
    "pymupdf==1.24.10",
    "python-dotenv==1.1.1",
    "setfit==1.1.0",
    "onnxruntime==1.22.1",
    "opencv-python==4.12.0.88",
    "punctuators==0.0.7",
    "ultralytics==8.3.200",
    "pdf2image==1.17.0",
    "gdown==5.2.1",
    "numpy==2.1.3",
    "flask==3.0.3",
    "pandas==2.2.3",
    "requests==2.32.3",
    "pillow==11.0.0",
    "pytesseract==0.3.10",
    "torch==2.5.1",
    "datasets==2.19.2",
    "transformers==4.45.1",
    "llm-multiprocessing-inference",
    "documents-processing",
    "data-connectors",
    "entry-extraction",
    "humanitarian-extract-classificator",
]

[project.scripts]
clear-create-entries = "cli.create_entries:main"
clear-generate-ui = "cli.generate_ui:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli"]

[tool.uv.sources]
llm-multiprocessing-inference = { git = "https://github.com/MediaMonitoringAndAnalysis/llm_multiprocessing_inference.git" }
documents-processing = { git = "https://github.com/MediaMonitoringAndAnalysis/DocumentsProcessing.git" }
data-connectors = { git = "https://github.com/MediaMonitoringAndAnalysis/DataConnectors.git" }
entry-extraction = { git = "https://github.com/MediaMonitoringAndAnalysis/EntryExtraction.git" }
humanitarian-extract-classificator = { git = "https://github.com/MediaMonitoringAndAnalysis/humanitarian-extract-classificator.git" }
